fix(docs): fix typo (#1208)
Signed-off-by: yuluo-yx <yuluo08290126@gmail.com>

--- a/website/i18n/zh-Hans/code.json
+++ b/website/i18n/zh-Hans/code.json
@@ -1063,7 +1063,7 @@
     "message": "关于工作组的问题或参与方式："
   },
   "workGroups.contact.issue": {
-    "message": "在 GitHub 上开启一个"
+    "message": "在 GitHub 上打开一个"
   },
   "workGroups.contact.discussion": {
     "message": "参与"
